# vit_inspect_tensorboard_plugin

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
examples/: vi_example.ipynb  vi_example_pytorch.ipynb
vit_inspect/: .babelrc  __init__.py  debug.py  demo.py  metadata.py  package.json  plugin.py  summary_v2.py  vit_inspect_plugin.py  vit_inspect_summary.py  vit_inspector.py  webpack-development.config.js  webpack-production.config.js  webpack.config.js  write_attention_weights.py
vit_inspect/public/: index.html
vit_inspect/src/: App.js  ButtonProgress.js  LayerHeadQuery.js  LayerQuery.js  Model.js  ModelItem.js  ModelSelector.js  PixelQuery.js  ProgressBar.js  RightSidebar.js  Sidebar.js  Visualizer.js  index.js
vit_inspect/static/css/: image_tile.css  main.css
vit_inspect/static/js/: main.js
vit_inspect/templates/: debug.html
