[project]
name = "vit_inspect"
version = "0.1.0"
authors = [
  { name="Stamatiadis Stefanos", email="stamatiad.st@gmail.com" },
]
description = "Vision Transformer visualizer"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/stamatiad/vit_inspect_tensorboard_plugin"
"Bug Tracker" = "https://github.com/stamatiad/vit_inspect_tensorboard_plugin/issues"


[project.entry-points."tensorboard_plugins"]
vit_inspect = "vit_inspect.vit_inspect_plugin:VitInspectPlugin"
