[metadata]
name = vit_inspect
version = 0.1.0
author = Stamatiadis Stefanos
author_email = stamatiad.st@gmail.com
description = Vision Transformer visualizer
long_description = file: README.md
keywords = vit vision transformer

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7

[options.entry_points]
tensorboard_plugins =
    vit_inspect = vit_inspect.vit_inspect_plugin:VitInspectPlugin
